applications/media-server/manifests/bazarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
spec:
  tls:
    - hosts: [ "bazarr.mrcontainer.nl" ]
      secretName: bazarr-tls
  rules:
    - host: bazarr.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
